Bootstrap, Tables, Otras Construcciones HTML, Lista desde los Controladores con Linq

--- a/Views/Alumno/Index.cshtml
+++ b/Views/Alumno/Index.cshtml
@@ -1,6 +1,6 @@
-﻿@model Asignatura
+﻿@model Alumno
 
-@{ ViewData["Title"] = "Información Asignatura";
+@{ ViewData["Title"] = "Información Alumno";
     Layout = "Simple"; }
 
 <h1>@ViewData["Title"]</h1>
