--- a/Views/Asignatura/MultiAsignatura.cshtml
+++ b/Views/Asignatura/MultiAsignatura.cshtml
@@ -1,17 +1,12 @@
-﻿@model Asignatura
+﻿@model List<Asignatura>
 
 @{ ViewData["Title"] = "Información Asignatura";
     Layout = "Simple"; }
 
 <h1>@ViewData["Title"]</h1>
 
-<strong>Desde la vista normal</strong>
-<p>
-    Nombre:@Model.Nombre <br />
-    Id: @Model.UniqueId
-</p>
-
 <strong>Desde la vista parcial</strong>
-<partial name="ObjetoEscuelaSimple" />
+
+<partial name="ListaObjetoEscuela"></partial>
 
 <p><i>@ViewBag.Fecha</i></p>
