Ajuste de Enrutamiento

--- a/Views/Asignatura/MultiAsignatura.cshtml
+++ b/Views/Asignatura/MultiAsignatura.cshtml
@@ -7,6 +7,6 @@
 
 <strong>Desde la vista parcial</strong>
 
-<partial name="ListaObjetoEscuela"></partial>
+<partial name="ListaObjetoEscuela">
 
 <p><i>@ViewBag.Fecha</i></p>
