Atributos de Validación

--- a/Views/Curso/MultiCurso.cshtml
+++ b/Views/Curso/MultiCurso.cshtml
@@ -1,12 +1,15 @@
 ﻿@model List<Curso>
 
 @{ ViewData["Title"] = "Información Curso";
+    ViewData["Controller"] = "curso";
     Layout = "Simple"; }
 
 <h1>@ViewData["Title"]</h1>
 
 <strong>Desde la vista parcial</strong>
+<br />
 
-<partial name="ListaObjetoEscuela"></partial>
+<partial name="btnCrear"/>
+<partial name="ListaObjetoEscuela"/>
 
 <p><i>@ViewBag.Fecha</i></p>
