--- a/Views/Shared/ListaObjetoEscuela.cshtml
+++ b/Views/Shared/ListaObjetoEscuela.cshtml
@@ -1,20 +1,31 @@
 ﻿@*@model List<ObjetoEscuelaBase>*@
 
+@{ var controller = ViewBag.Controller; }
 
 <table class="table table-dark">
     <thead class="thead-dark">
         <tr>
             <th scope="col">Nombre</th>
-            <th scope="col">ID</th>
+            <th scope="col" colspan="2">ID</th>
         </tr>
     </thead>
     <tbody>
+
         @foreach (var obj in Model)
         {
-        <tr>
-            <td>@obj.Nombre</td>
-            <td>@obj.Id</td>
-        </tr>            
+            <tr>
+                <td>@obj.Nombre</td>
+                <td>@obj.Id</td>
+                <td>
+                    <a asp-controller=@controller asp-action="edit" asp-route-id=@obj.Id class="btn btn-info btn-sm ml-2">
+                        Editar
+                    </a>
+                    <a asp-controller=@controller asp-action="delete" asp-route-id=@obj.Id class="btn btn-danger btn-sm ml-2">
+                        Eliminar
+                    </a>
+                </td>
+            </tr>
         }
+
     </tbody>
 </table>
